[package]
name = "siliconhook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "victim"
path = "src/victim.rs"

[[bin]]
name = "siliconhook"
path = "src/main.rs"

[dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Kernel"
] }